fixing spillover layout

--- a/css/sentienceinstitute.scss
+++ b/css/sentienceinstitute.scss
@@ -3943,19 +3943,19 @@ hr{
 
 .moral-spillover-in-human-ai-interaction-container {
   // Italics
-  .c0.c6{
+  .c8.c28{
   font-style: italic;
   }
 
-  .c17.c18{
-    font-weight: $bold-weight;
-    }
-
-  .c7.c17{
+  .c52.c37{
       font-weight: $bold-weight;
       }
 
-  .c13.c14.c20{
+  .c25.c6{
+      font-weight: $bold-weight;
+      }
+
+  .c5.c7.c13{
     margin-bottom: 0px;
     margin-left: 30px;
   }
@@ -3974,11 +3974,11 @@ hr{
   }
 
       // TOC
-      .c23{
+      .c10{
       margin-bottom: 0px;
       }
 
-      .c23.c50{
+      .c10.c19{
       margin-bottom: 0px;
       margin-left: 30px;
       }
